@@ -5,6 +5,8 @@ import com.example.basic.repository.UserRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Bean;
+import org.springframework.mock.web.MockHttpSession;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.util.Arrays;
@@ -21,6 +23,11 @@ class BasicApplicationTests {
     @Autowired
     private BCryptPasswordEncoder passwordEncoder;
 
+    @Bean
+    public MockHttpSession mockHttpSession() {
+        return new MockHttpSession();
+    }
+
     @Test
     void add_user() {
         User user = User.builder()
@@ -28,7 +35,7 @@ class BasicApplicationTests {
                 .email("hien@techmaster.vn")
                 .password(passwordEncoder.encode("111"))
                 .avatar("https://media.techmaster.vn/api/static/kC46wkzx/LszCg_7K")
-                .role(Arrays.asList("USER", "EDITOR", "ADMIN"))
+                .role(Arrays.asList("USER", "ADMIN"))
                 .build();
 
         User user1 = User.builder()
@@ -39,23 +46,6 @@ class BasicApplicationTests {
                 .role(List.of("USER"))
                 .build();
 
-        User user2 = User.builder()
-                .name("Minh Duy")
-                .email("duy@gmail.com")
-                .password(passwordEncoder.encode("111"))
-                .avatar("https://media.techmaster.vn/api/static/c2m5ou451cob24f6skeg/3Zhnoo2k")
-                .role(Arrays.asList("USER", "EDITOR"))
-                .build();
-
-        userRepository.save(user);
-        userRepository.save(user1);
-        userRepository.save(user2);
-    }
-
-    @Test
-    void find_by_email() {
-        User user = userRepository.findByEmail("hien@techmaster.vn");
-
-        assertThat(user).isNotNull();
+        userRepository.saveAll(List.of(user, user1));
     }
 }
